Made files accessbile for netlify

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
     position: relative;
     top: 50px;
     padding: 20px;
-    background-color: rgb(192, 192, 192);
+    background-color: #87ceeb;
     width: 140px;
     height: 140px;
     border-radius: 50%;
